--- a/form.html
+++ b/form.html
@@ -12,6 +12,55 @@
         <label>Student password </label>
         <input type="password">
         <label> email address</label>
+        <input type="email" important>
+        <!-- radio -->
+
+        <label>Gender</label>
+        <!-- <input type="radio" id ="html" name="pihul" value=" html1"><br> -->
+        <label>Male</label>
+        <input type="radio" id ="html" name="pihul" value=" html1"><br>
+        <label>Female</label>
+        <input type="radio" id ="html" name="pihul" value=" html1"><br>
+        <label>other</label>
+        <input type="radio" id ="html" name="pihul" value=" html1"><br>
+
+        <!-- checkbox -->
+         <br>
+         <label>Education</label><br>
+         <input type="checkbox">
+         <label>Class 10</label><br>
+         <input type="checkbox">
+         <label>Class 12</label><br>
+         <input type="checkbox">
+         <label>Btech</label><br>
+         <input type="checkbox">
+         <label>Mtech</label><br>
+         
+
+         <!-- select -->
+        <label>Select your city</label>
+        <select>
+            <option>Select your city</option>
+            <option>Meerut</option>
+            <option>Delhi-NCR</option>
+            <option>Noida</option>
+            <option>Ghazhibad</option>
+            <option>Moradnagar</option>
+            <option>modinagar</option>
+        </select>
+        <br>
+        <button>Click me </button>
+        <input type="submit">
+
+        <!-- file -->
+        <br>
+        <label>Select your file</label>
+        <input type="file">
+         
+
+
+
+
     </form>
 </body>
 </html>
